[package]
name = "tracing-shared"
version = "0.1.5"
edition = "2021"

authors = ["JakkuSakura <qjk2001@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Share tracing bwtween dylibs"
repository = "https://github.com/JakkuSakura/tracing-shared-rs"


[dependencies]
tracing = { version = "0.1", features = [] }
log = { version = "0.4", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = ["log"]
log = ["dep:log"]
tokio = ["dep:tokio"]

[dev-dependencies]
libloading = "0.8"
tracing-subscriber = "0.3"
example-lib = { path = "examples/example-lib" }


[workspace]
members = [".", "examples/example-lib"]
default-members = ["."]
