[package]
name = "example-lib"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
tracing-shared = { path = "../.." }
tracing = "0.1"
log = { version = "0.4", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = ["log", "tokio"]
log = ["dep:log", "tracing-shared/log"]
tokio = ["dep:tokio", "tracing-shared/tokio"]
